# re_tcdt_rust

./: .gitignore  Cargo.toml  README.md
api/: Cargo.toml
api/src/: api_register.rs  app.rs  lib.rs
api/src/api/agg/: role_agg_api.rs  user_agg_api.rs
api/src/api/base/: bill_form_api.rs  button_action_api.rs  common_attribute_api.rs  component_api.rs  component_entity_api.rs  component_entity_associate_api.rs  component_enum_api.rs  component_module_api.rs  component_node_ui_api.rs  computation_attribute_api.rs  data_type_api.rs  dd_entity_api.rs  dd_enum_api.rs  dto_computation_attribute_api.rs  dto_entity_api.rs  dto_entity_associate_api.rs  dto_entity_attribute_api.rs  dto_entity_collection_api.rs  dto_enum_api.rs  dto_enum_associate_api.rs  dto_enum_attribute_api.rs  dto_module_api.rs  dto_node_ui_api.rs  entity_associate_api.rs  entity_attribute_api.rs  entity_collection_api.rs  enum_associate_api.rs  enum_attribute_api.rs  ext_attribute_api.rs  factory_api.rs  menu_api.rs  node_ui_api.rs  project_api.rs  query_api.rs  role_api.rs  role_menu_api.rs  sub_project_api.rs  token_api.rs  tree_api.rs  user_api.rs  (+1 more)
api/src/api/common/: param.rs
api/src/api/ext/: component_entity_ext_api.rs  component_enum_ext_api.rs  component_ext_api.rs  dd_entity_ext_api.rs  dd_enum_ext_api.rs  dto_entity_collection_ext_api.rs  dto_entity_ext_api.rs  dto_enum_ext_api.rs  entity_collection_ext_api.rs  generator_api.rs  login_ext_api.rs  menu_ext_api.rs  project_ext_api.rs  template_file_api.rs  user_ext_api.rs
api/src/conf/: cors_handle.rs  error_handle.rs  reponse_handle.rs  response_handle.rs  security_handle.rs
conf/: .env  (+1 more)
service/: Cargo.toml
service/src/: lib.rs
service/src/common/: aq.rs  aq_const.rs  result.rs
service/src/service/agg/: role_agg_service.rs  user_agg_service.rs
service/src/service/base/: bill_form_service.rs  button_action_service.rs  common_attribute_service.rs  component_entity_associate_service.rs  component_entity_service.rs  component_enum_service.rs  component_module_service.rs  component_node_ui_service.rs  component_service.rs  computation_attribute_service.rs  data_type_service.rs  dd_entity_service.rs  dd_enum_service.rs  dto_computation_attribute_service.rs  dto_entity_associate_service.rs  dto_entity_attribute_service.rs  dto_entity_collection_service.rs  dto_entity_service.rs  dto_enum_associate_service.rs  dto_enum_attribute_service.rs  dto_enum_service.rs  dto_module_service.rs  dto_node_ui_service.rs  entity_associate_service.rs  entity_attribute_service.rs  entity_collection_service.rs  enum_associate_service.rs  enum_attribute_service.rs  ext_attribute_service.rs  factory_service.rs  menu_service.rs  node_ui_service.rs  project_service.rs  query_service.rs  role_menu_service.rs  role_service.rs  sub_project_service.rs  token_service.rs  tree_service.rs  user_role_service.rs  (+1 more)
service/src/service/ext/: component_ext_service.rs  data_type_ext_service.rs  dto_entity_collection_ext_service.rs  entity_collection_ext_service.rs  (+1 more)
service/src/util/: dyn_query.rs  file_util.rs  id_util.rs
tcdt_common/: Cargo.toml
tcdt_common/src/: file_util.rs  lib.rs  name_switch_util.rs  tcdt_conf.rs  tcdt_service_error.rs  tcdt_trait.rs
tcdt_macro/: Cargo.toml
tcdt_macro/src/: lib.rs
tcdt_macro/src/macro_impl/: tcdt_api_scan.rs  tcdt_po_cud.rs  tcdt_po_save.rs  tcdt_vo_convert.rs
(+264 files in other folders)
