[package]
name = "tcdt_rust"
version = "0.1.0"
edition = "2021"
build = "build/build.rs" # defined custom build

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
    ".",
    "api",
    "service",
    "entity",
    "tcdt_common",
    "tcdt_macro",
]
exclude = [
    "conf",
    "temp",
    "tcdt",
    "logs",
]

[dependencies]
tcdt_api = { path = "api" }

[target.'cfg(not(target_os="windows"))'.dependencies]
openssl = { version = "0.10", features = ["vendored"] }

[build-dependencies]
serde = { version = "=1", features = ["derive"] }
serde_json = "=1.0.120"
tera = "=1.19.0"
regex = "=1.10.4"
