[package]
name = "tcdt_api"
version = "0.1.0"
authors = ["Sam Samai <sam@studio2pi.com.au>"]
edition = "2021"
# publish = false

[dependencies]
tcdt_common = { path = "../tcdt_common" }
entity = { path = "../entity" }
tcdt_macro = { path = "../tcdt_macro" }
tcdt_service = { path = "../service" }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.120"
futures-util = "0.3.30"
actix-files = "0.6"
actix-http = "3"
actix-rt = "2.8"
actix-service = "2"
actix-web = "4"
tera = "1.19.0"
dotenvy = "0.15"
listenfd = "1"
log = "0.4"
# tracing-subscriber = { version = "0.3.17", features = ["env-filter"] } # 分布式日志记录
# tracing-appender = "0.2.3"
log4rs = "1.3.0"
# env_logger = "0.11.3"
# fern = "0.6.2"
tokio = { version = "=1.20.0", features = ["full"] }
mime = "0.3.17"
url = "2.5.2"
