[package]
name = "tcdt_service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tcdt_common = { path = "../tcdt_common" }
tcdt_macro = { path = "../tcdt_macro" }
entity = { path = "../entity" }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.120"
nanoid = "0.4"
rust-crypto = "0.2.2"
tera = "1.19.0"
log = "0.4"
flate2 = "1.0.30"
zip = "2.1.3"
walkdir = "2.5.0"
anyhow = "1"
clap = { version = "=4.4.18", features = ["derive"] }
rand = "0.8.5"
regex = "1.10.4"

[dependencies.sea-orm]
version = "=1.0.0-rc.5" # sea-orm version
features = [
    "debug-print",
    "runtime-async-std-native-tls",
    "sqlx-mysql",
    # "sqlx-postgres",
    # "sqlx-sqlite",
]

[dev-dependencies]
tokio = { version = "1.20.0", features = ["macros", "rt"] }

[features]
mock = ["sea-orm/mock"]

[[test]]
name = "mock"
required-features = ["mock"]
